@@ -188,17 +188,6 @@ elif [ "$ACTION" = "build" ]; then
  packageJar
  exit
 
-elif [ "$ACTION" = "web" ]; then
- # remove once #1700 is implemented
- if [ ! -f "web/src/main/resources/assets/js/main.js" ]; then
-   rm -rf ./*/target # force rebuilding the jar as overrides is likely not enabled for assets in config.yml
-   cd web
-   npm install
-   BROWSERIFYSWAP_ENV='development' npm run bundleProduction
-   cd ..
- else
-   echo "## existing main.js found $JAR"
- fi
 fi
  
 if [ "$FILE" = "" ]; then
